--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -24,9 +24,11 @@
     "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.0",
     "mongoose-encryption": "^2.0.2",
+    "node-rsa": "^1.1.1",
     "nodemon": "^2.0.4"
   }
 }
