fixed some code in server and changed structure of app folder structure

--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
