--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -29,7 +29,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.0",
     "mongoose-encryption": "^2.0.2",
+    "morgan": "^1.10.0",
     "node-rsa": "^1.1.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "redis": "^3.0.2",
+    "redis-server": "^1.2.2"
   }
 }
