--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/mhasan004/Basic_REST_API_JWT_Authentication#readme",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "async-redis": "^1.1.7",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -32,7 +33,6 @@
     "morgan": "^1.10.0",
     "node-rsa": "^1.1.1",
     "nodemon": "^2.0.4",
-    "redis": "^3.0.2",
     "redis-server": "^1.2.2"
   }
 }
