--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ COOKIE_SECRET = NEED_THIS_TO_PARSE_HTTPONLY_SIGNED_COOKIERS_%asdjh^#923Aum7KG5qa
 SALT_NUM = 10
 PORT = 8000
 REDIS_PORT = 6379
+USE_TLS = false
