Tested and fixed auth endpoints (login, register, refresh tokens) and most of user endpoints

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-CLIENT_REACT/play-share-app/node_modules
-SERVER/node_modules/
-/Trash Bin
-
+node_modules
+TrashBin
 .env
+.gitignore
+dump.rdb
+Notes
