silent refresh finished on client and api, needs more testing. API: finished and tested user and auth endpoints. client: feed and make post working

--- a/CLIENT/play-share-app/.gitignore
+++ b/CLIENT/play-share-app/.gitignore
@@ -7,7 +7,6 @@
 
 # testing
 /coverage
-
 # production
 /build
 
@@ -21,3 +20,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+.vimrc
+vimrc
+package-lock.json
+some notes.txt
