--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "async-redis": "^1.1.7",
+    "aws-sdk": "^2.844.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -27,11 +28,14 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.3",
+    "file-type": "^16.2.0",
     "helmet": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.0",
     "mongoose-encryption": "^2.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "multiparty": "^4.2.2",
     "node-rsa": "^1.1.1",
     "nodemon": "^2.0.4",
     "redis-server": "^1.2.2"
