--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -2,10 +2,10 @@
   "name": "rest_api_jwt",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -38,6 +38,7 @@
     "multiparty": "^4.2.2",
     "node-rsa": "^1.1.1",
     "nodemon": "^2.0.4",
+    "redis": "^3.0.2",
     "redis-server": "^1.2.2"
   }
 }
