--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -19,9 +19,9 @@
   "homepage": "https://github.com/mhasan004/Basic_REST_API_JWT_Authentication#readme",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
-    "async-redis": "^1.1.7",
     "aws-sdk": "^2.848.0",
     "bcryptjs": "^2.4.3",
+    "bluebird": "^3.7.2",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
